Pagination implementation. Change player counter to be dynamic. Add add player button and search input

--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -20,7 +20,7 @@
     <div class="flex flex-1 flex-col">
         <button class="btn" type="button">
             <div class="flex w-1/5 h-[50px] justify-center">
-                <img src="/icons/people-icon.png" class="object-contain" />
+                <img src="/icons/people-icon.png" class="object-contain" alt="Peaople icon"/>
             </div>
             <span class="text-2xl font-bold">Players</span>
             <span class="w-1/5"></span>
@@ -30,6 +30,7 @@
                 <img
                     src="/icons/basketball-court-icon.png"
                     class="object-contain"
+                    alt="App logo"
                 />
             </div>
             <span class="text-2xl font-bold">Matches</span>
