--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,7 +17,7 @@ import "../styles/global.css";
 	<body>
 		<div class="flex min-h-screen font-sans">
 			<slot name="sidebar" />
-			<main class="flex-1">
+			<main class="flex-1 bg-(--light-gray)">
 				<slot name="content" />
 			</main>
 		</div>
