--- a/src/pages/players/index.astro
+++ b/src/pages/players/index.astro
@@ -1,7 +1,7 @@
 ---
-import MySiteLayout from "../layouts/BaseLayout.astro";
-import Sidebar from "../components/Sidebar.astro";
-import Content from "../components/Content.astro";
+import MySiteLayout from "../../layouts/BaseLayout.astro";
+import Sidebar from "../../components/Sidebar.astro";
+import Content from "../../components/Content.astro";
 ---
 
 <MySiteLayout title="Player Management">
