--- a/src/pages/players/new/index.astro
+++ b/src/pages/players/new/index.astro
@@ -1,10 +1,14 @@
 ---
-import { FormPageLayout } from "../../../layouts/FormPageLayout.astro"
+import FormPageLayout from "../../../layouts/FormPageLayout.astro"
 import Sidebar from "../../../components/Sidebar.astro";
+import CreatePlayerForm from "../../../components/react/form/CreatePlayerForm.tsx";
 ---
 
-<FormPageLayout>
+<FormPageLayout title="Register new player">
+    <Fragment slot="Sidebar">
+        <Sidebar />
+    </Fragment>
     <Fragment slot="form">
-
+        <CreatePlayerForm />
     </Fragment>
 </FormPageLayout>
