create design for mobile and add input validation

--- a/src/layouts/FormPageLayout.astro
+++ b/src/layouts/FormPageLayout.astro
@@ -6,7 +6,7 @@ import "../styles/global.css";
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
         <meta
@@ -14,8 +14,8 @@ import "../styles/global.css";
             content="Webapp that allows to manage a basteball team."
         />
     </head>
-    <body>
-        <main class="min-h-screen font-sans bg-(--secondary-color)">
+    <body class="font-sans bg-(--middle-gray)">
+        <main>
             <slot name="form" />
         </main>
     </body>
